--- a/BaseGUI/src/fxml/DatabaseWindow.fxml
+++ b/BaseGUI/src/fxml/DatabaseWindow.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -37,6 +39,12 @@
          </font>
       </Text>
       <Button layoutX="144.0" layoutY="205.0" mnemonicParsing="false" onAction="#editAction" text="Edytuj" />
-      <Button layoutX="109.0" layoutY="14.0" mnemonicParsing="false" onAction="#searchAction" text="Szukaj" />
+      <Button layoutX="24.0" layoutY="14.0" mnemonicParsing="false" onAction="#searchAction" text="Szukaj">
+         <tooltip>
+            <Tooltip text="Wybierz co chcesz wyszukać" />
+         </tooltip></Button>
+      <CheckBox fx:id="checkBoxModel" layoutX="75.0" layoutY="52.0" mnemonicParsing="false" />
+      <CheckBox fx:id="checkBoxPower" layoutX="75.0" layoutY="100.0" mnemonicParsing="false" />
+      <CheckBox fx:id="checkBoxPrice" layoutX="75.0" layoutY="147.0" mnemonicParsing="false" />
    </children>
 </Pane>
