--- a/BaseGUI/src/fxml/MenuWindow.fxml
+++ b/BaseGUI/src/fxml/MenuWindow.fxml
@@ -12,8 +12,7 @@
             <Font name="Times New Roman Bold" size="24.0" />
          </font>
       </Text>
-      <Button layoutX="160.0" layoutY="86.0" mnemonicParsing="false" onAction="#newAction" prefHeight="25.0" prefWidth="86.0" text="Nowa baza" />
-      <Button layoutX="160.0" layoutY="111.0" mnemonicParsing="false" onAction="#addAction" prefHeight="25.0" prefWidth="86.0" text="Dodaj" />
-      <Button layoutX="160.0" layoutY="136.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Button" />
+      <Button layoutX="160.0" layoutY="89.0" mnemonicParsing="false" onAction="#addAction" prefHeight="25.0" prefWidth="86.0" text="Baza" />
+      <Button layoutX="160.0" layoutY="126.0" mnemonicParsing="false" onAction="#optionsAction" prefHeight="25.0" prefWidth="86.0" text="Opcje" />
    </children>
 </Pane>
