--- a/BaseGUI/src/fxml/OptionsWindow.fxml
+++ b/BaseGUI/src/fxml/OptionsWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -9,15 +10,29 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OptionsWindowController">
    <children>
       <Button layoutX="37.0" layoutY="66.0" mnemonicParsing="false" onAction="#newBaseAction" prefHeight="25.0" prefWidth="87.0" text="Nowa baza" />
-      <Button layoutX="38.0" layoutY="105.0" mnemonicParsing="false" onAction="#deleteBaseAction" prefHeight="25.0" prefWidth="87.0" text="Usuń bazę" />
-      <Button layoutX="37.0" layoutY="143.0" mnemonicParsing="false" onAction="#selectBaseAction" text="Wybierz bazę" />
+      <Button layoutX="38.0" layoutY="105.0" mnemonicParsing="false" onAction="#deleteBaseAction" prefHeight="25.0" prefWidth="87.0" text="Usuń bazę">
+         <tooltip>
+            <Tooltip text="Wybierz z listy bazę do usunięcia" />
+         </tooltip></Button>
+      <Button layoutX="37.0" layoutY="143.0" mnemonicParsing="false" onAction="#selectBaseAction" text="Wybierz bazę">
+         <tooltip>
+            <Tooltip text="Wybierz z listy bazę z której chcesz korzystać" />
+         </tooltip></Button>
       <ListView fx:id="list" layoutX="213.0" layoutY="49.0" prefHeight="200.0" prefWidth="308.0" />
       <Text layoutX="37.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ustawienia:" wrappingWidth="104.376953125">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <Button layoutX="38.0" layoutY="181.0" mnemonicParsing="false" onAction="#menuAction" prefHeight="25.0" prefWidth="87.0" text="Menu" />
+      <Button layoutX="38.0" layoutY="181.0" mnemonicParsing="false" onAction="#menuAction" prefHeight="25.0" prefWidth="87.0" text="Menu">
+         <tooltip>
+            <Tooltip text="Powrót do menu" />
+         </tooltip></Button>
       <Button layoutX="213.0" layoutY="249.0" mnemonicParsing="false" onAction="#showDatabases" text="Wyświetl Bazy danych" />
+      <Text fx:id="selectBaseInfo" layoutX="23.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="177.13671875">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
    </children>
 </Pane>
