--- a/BaseGUI/src/fxml/DatabaseWindow.fxml
+++ b/BaseGUI/src/fxml/DatabaseWindow.fxml
@@ -2,8 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.Pane?>
@@ -18,7 +19,6 @@
       <Text layoutX="31.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Model " />
       <Text layoutX="31.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Moc" />
       <Text layoutX="31.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cena" />
-      <ListView fx:id="list" layoutX="266.0" layoutY="14.0" prefHeight="354.0" prefWidth="327.0" />
       <Button layoutX="86.0" layoutY="252.0" mnemonicParsing="false" onAction="#saveAction" text="Zapisz" />
       <Button layoutX="204.0" layoutY="252.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteAction" text="Usuń" />
       <Button layoutX="31.0" layoutY="252.0" mnemonicParsing="false" onAction="#menuAction" text="Menu" />
@@ -51,5 +51,12 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
+      <TableView fx:id="baseTable" layoutX="266.0" layoutY="22.0" prefHeight="327.0" prefWidth="323.0">
+        <columns>
+          <TableColumn fx:id="tableColumnMark" minWidth="8.0" prefWidth="107.0" text="Model" />
+          <TableColumn fx:id="tableColumnPower" minWidth="0.0" prefWidth="107.0" text="Moc" />
+            <TableColumn fx:id="tableColumnPrice" prefWidth="107.0" text="Cena" />
+        </columns>
+      </TableView>
    </children>
 </Pane>
