--- a/BaseGUI/src/fxml/OptionsWindow.fxml
+++ b/BaseGUI/src/fxml/OptionsWindow.fxml
@@ -48,6 +48,7 @@
       </Text>
       <Button layoutX="24.0" layoutY="177.0" mnemonicParsing="false" onAction="#copyToMySqlAction" prefHeight="25.0" prefWidth="87.0" text="Przenieś " />
       <Button layoutX="490.0" layoutY="177.0" mnemonicParsing="false" onAction="#copyMySqlBaseToLocalAction" prefHeight="25.0" prefWidth="87.0" text="Pobierz bazę" />
-      <Button layoutX="24.0" layoutY="214.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Zaktualizuj" />
+      <Button layoutX="24.0" layoutY="214.0" mnemonicParsing="false" onAction="#joinToMySqlTableAction" prefHeight="25.0" prefWidth="87.0" text="Połącz" />
+      <Button layoutX="490.0" layoutY="214.0" mnemonicParsing="false" onAction="#joinToLocalTablesAction" prefHeight="25.0" prefWidth="87.0" text="Połącz" />
    </children>
 </Pane>
