--- a/BaseGUI/src/fxml/OptionsWindow.fxml
+++ b/BaseGUI/src/fxml/OptionsWindow.fxml
@@ -50,5 +50,7 @@
       <Button layoutX="490.0" layoutY="177.0" mnemonicParsing="false" onAction="#copyMySqlBaseToLocalAction" prefHeight="25.0" prefWidth="87.0" text="Pobierz bazę" />
       <Button layoutX="24.0" layoutY="214.0" mnemonicParsing="false" onAction="#joinToMySqlTableAction" prefHeight="25.0" prefWidth="87.0" text="Połącz" />
       <Button layoutX="490.0" layoutY="214.0" mnemonicParsing="false" onAction="#joinToLocalTablesAction" prefHeight="25.0" prefWidth="87.0" text="Połącz" />
+      <Button layoutX="490.0" layoutY="250.0" mnemonicParsing="false" onAction="#createMySqlTableExcelFileAction" prefHeight="25.0" prefWidth="87.0" text="Excel" />
+      <Button layoutX="24.0" layoutY="250.0" mnemonicParsing="false" onAction="#createLocalTableExcelFileAction" prefHeight="25.0" prefWidth="87.0" text="Excel" />
    </children>
 </Pane>
