--- a/BaseGUI/src/fxml/StackPaneWindow.fxml
+++ b/BaseGUI/src/fxml/StackPaneWindow.fxml
@@ -3,6 +3,6 @@
 <?import javafx.scene.layout.StackPane?>
 
 
-<StackPane fx:id="stackpane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<StackPane fx:id="stackpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
 	<!-- TODO Add Nodes -->
 </StackPane>
