--- a/BaseGUI/src/fxml/admin/BooksOfflineWindow.fxml
+++ b/BaseGUI/src/fxml/admin/BooksOfflineWindow.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MysqlDatabaseWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BooksOfflineWindowController">
    <children>
       <TextField fx:id="text1" layoutX="101.0" layoutY="97.0" />
       <TextField fx:id="text2" layoutX="101.0" layoutY="147.0" />
@@ -23,11 +23,13 @@
       <Button layoutX="199.0" layoutY="252.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteAction" text="Delete">
          <tooltip>
             <Tooltip text="Wybierz z tabeli rekord który chcesz usunąć" />
-         </tooltip></Button>
+         </tooltip>
+      </Button>
       <Button layoutX="31.0" layoutY="252.0" mnemonicParsing="false" onAction="#menuAction" text="Menu">
          <tooltip>
             <Tooltip text="Powrót do menu" />
-         </tooltip></Button>
+         </tooltip>
+      </Button>
       <Separator layoutX="251.0" layoutY="-7.0" orientation="VERTICAL" prefHeight="419.0" prefWidth="15.0" />
       <Text fx:id="saveInfo" layoutX="21.0" layoutY="333.0" strokeType="OUTSIDE" strokeWidth="0.0" text="The data have been saved" wrappingWidth="237.34959506988525">
          <font>
@@ -47,11 +49,13 @@
       <Button layoutX="140.0" layoutY="252.0" mnemonicParsing="false" onAction="#editAction" prefHeight="25.0" prefWidth="50.0" text="Edit">
          <tooltip>
             <Tooltip text="Wybierz z tabeli rekord który chcesz edytować" />
-         </tooltip></Button>
+         </tooltip>
+      </Button>
       <Button layoutX="25.0" layoutY="61.0" mnemonicParsing="false" onAction="#searchAction" text="Search">
          <tooltip>
             <Tooltip text="Wybierz co chcesz wyszukać" />
-         </tooltip></Button>
+         </tooltip>
+      </Button>
       <CheckBox fx:id="checkBoxTitle" layoutX="76.0" layoutY="99.0" mnemonicParsing="false" />
       <CheckBox fx:id="checkBoxAuthor" layoutX="76.0" layoutY="147.0" mnemonicParsing="false" />
       <CheckBox fx:id="checkBoxISBN" layoutX="76.0" layoutY="194.0" mnemonicParsing="false" />
@@ -61,11 +65,11 @@
          </font>
       </Text>
       <TableView fx:id="baseTable" layoutX="266.0" layoutY="22.0" prefHeight="327.0" prefWidth="323.0">
-        <columns>
-          <TableColumn fx:id="tableColumnTitle" minWidth="8.0" prefWidth="107.0" text="Title" />
-          <TableColumn fx:id="tableColumnAuthor" minWidth="0.0" prefWidth="107.0" text="Author" />
+         <columns>
+            <TableColumn fx:id="tableColumnTitle" minWidth="8.0" prefWidth="107.0" text="Title" />
+            <TableColumn fx:id="tableColumnAuthor" minWidth="0.0" prefWidth="107.0" text="Author" />
             <TableColumn fx:id="tableColumnISBN" prefWidth="107.0" text="ISBN" />
-        </columns>
+         </columns>
       </TableView>
    </children>
 </Pane>
