--- a/BaseGUI/src/fxml/admin/ReportsListWindow.fxml
+++ b/BaseGUI/src/fxml/admin/ReportsListWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OptionsWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.ReportsListWindowController">
    <children>
       <Button layoutX="24.0" layoutY="66.0" mnemonicParsing="false" onAction="#newBaseAction" prefHeight="25.0" prefWidth="87.0" text="Nowa tabela" />
       <Button layoutX="24.0" layoutY="105.0" mnemonicParsing="false" onAction="#deleteBaseAction" prefHeight="25.0" prefWidth="87.0" text="Usuń tabelę">
