--- a/BaseGUI/src/fxml/admin/BorrowedBooksWindow.fxml
+++ b/BaseGUI/src/fxml/admin/BorrowedBooksWindow.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BorrowedBooksWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BorrowedBooksWindowController">
    <children>
-      <Text layoutX="196.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Borrowed Books">
+      <Text layoutX="307.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Borrowed Books">
          <font>
             <Font name="Arial Bold" size="26.0" />
          </font>
@@ -37,7 +37,7 @@
             <Font name="Arial Bold" size="15.0" />
          </font>
       </Button>
-      <TableView layoutX="139.0" layoutY="117.0" prefHeight="274.0" prefWidth="449.0">
+      <TableView layoutX="139.0" layoutY="117.0" prefHeight="274.0" prefWidth="651.0">
         <columns>
           <TableColumn prefWidth="75.0" text="Title" />
           <TableColumn prefWidth="75.0" text="Author" />
@@ -45,6 +45,8 @@
             <TableColumn prefWidth="75.0" text="Library card &#10;    number" />
             <TableColumn prefWidth="75.0" text="Name" />
             <TableColumn prefWidth="75.0" text="Surname" />
+            <TableColumn prefWidth="100.0" text="Borrow date" />
+            <TableColumn prefWidth="100.0" text="Expiration date" />
         </columns>
       </TableView>
    </children>
