--- a/BaseGUI/src/fxml/user/HistoryWindow.fxml
+++ b/BaseGUI/src/fxml/user/HistoryWindow.fxml
@@ -7,21 +7,22 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.HistoryWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.HistoryWindowController">
    <children>
-      <Text layoutX="180.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="History">
+      <Text layoutX="228.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="History">
          <font>
             <Font name="Arial Bold" size="26.0" />
          </font>
       </Text>
       <Button layoutX="21.0" layoutY="350.0" mnemonicParsing="false" onAction="#menuAction" text="Menu" />
-      <TableView layoutX="33.0" layoutY="83.0" prefHeight="250.0" prefWidth="385.0">
+      <TableView layoutX="9.0" layoutY="56.0" prefHeight="277.0" prefWidth="526.0">
         <columns>
           <TableColumn prefWidth="75.0" text="Title" />
           <TableColumn prefWidth="75.0" text="Author" />
             <TableColumn prefWidth="75.0" text="ISBN" />
-            <TableColumn prefWidth="82.0" text=" Borrow date" />
-            <TableColumn prefWidth="77.0" text="Return date" />
+            <TableColumn prefWidth="100.0" text=" Borrow date" />
+            <TableColumn prefWidth="100.0" text="Expiration date" />
+            <TableColumn prefWidth="100.0" text="Return date" />
         </columns>
       </TableView>
    </children>
