--- a/BaseGUI/src/fxml/user/UserMenuWindow.fxml
+++ b/BaseGUI/src/fxml/user/UserMenuWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.UserMenuWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.UserMenuWindowController">
    <children>
       <Button layoutX="37.0" layoutY="123.0" mnemonicParsing="false" onAction="#booksAction" prefHeight="25.0" prefWidth="59.0" text="Books" />
       <Button layoutX="37.0" layoutY="175.0" mnemonicParsing="false" onAction="#settingsAction" prefHeight="25.0" prefWidth="59.0" text="Settings" />
@@ -18,19 +18,21 @@
       </Text>
       <Button layoutX="37.0" layoutY="227.0" mnemonicParsing="false" onAction="#historyAction" prefHeight="25.0" prefWidth="59.0" text="History" />
       <Button layoutX="37.0" layoutY="281.0" mnemonicParsing="false" onAction="#logOffAction" prefHeight="25.0" prefWidth="59.0" text="Log off" />
-      <TableView layoutX="136.0" layoutY="96.0" prefHeight="105.0" prefWidth="350.0">
+      <TableView layoutX="136.0" layoutY="96.0" prefHeight="105.0" prefWidth="457.0">
         <columns>
           <TableColumn prefWidth="75.0" text="Title" />
           <TableColumn prefWidth="75.0" text="Author" />
             <TableColumn prefWidth="75.0" text="ISBN" />
+            <TableColumn prefWidth="107.0" text="Borrow date" />
             <TableColumn prefWidth="124.0" text="Expiration date" />
         </columns>
       </TableView>
-      <TableView layoutX="136.0" layoutY="257.0" prefHeight="156.0" prefWidth="350.0">
+      <TableView layoutX="136.0" layoutY="257.0" prefHeight="156.0" prefWidth="457.0">
         <columns>
           <TableColumn prefWidth="75.0" text="Title" />
           <TableColumn prefWidth="75.0" text="Author" />
             <TableColumn prefWidth="75.0" text="ISBN" />
+            <TableColumn prefWidth="107.0" text="Borrow date" />
             <TableColumn prefWidth="124.0" text="Expiration date" />
         </columns>
       </TableView>
@@ -44,6 +46,6 @@
             <Font name="Arial Bold" size="16.0" />
          </font>
       </Text>
-      <Button layoutX="350.0" layoutY="201.0" mnemonicParsing="false" onAction="#cancelReservationAction" prefHeight="25.0" prefWidth="136.0" text="Cancel reservation" />
+      <Button layoutX="457.0" layoutY="201.0" mnemonicParsing="false" onAction="#cancelReservationAction" prefHeight="25.0" prefWidth="136.0" text="Cancel reservation" />
    </children>
 </Pane>
