--- a/BaseGUI/src/fxml/admin/BooksWindow.fxml
+++ b/BaseGUI/src/fxml/admin/BooksWindow.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="716.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BooksWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BooksWindowController">
    <children>
       <TextField fx:id="text1" layoutX="101.0" layoutY="97.0" />
       <TextField fx:id="text2" layoutX="101.0" layoutY="147.0" />
@@ -55,12 +55,13 @@
       <CheckBox fx:id="checkBoxTitle" layoutX="76.0" layoutY="99.0" mnemonicParsing="false" />
       <CheckBox fx:id="checkBoxAuthor" layoutX="76.0" layoutY="147.0" mnemonicParsing="false" />
       <CheckBox fx:id="checkBoxISBN" layoutX="76.0" layoutY="194.0" mnemonicParsing="false" />
-      <TableView fx:id="baseTable" layoutX="266.0" layoutY="22.0" prefHeight="327.0" prefWidth="419.0">
+      <TableView fx:id="baseTable" layoutX="266.0" layoutY="22.0" prefHeight="327.0" prefWidth="527.0">
         <columns>
-          <TableColumn fx:id="tableColumnTitle" minWidth="8.0" prefWidth="107.0" text="Title" />
+            <TableColumn fx:id="tableColumnBookID" prefWidth="102.0" text="BookID" />
+          <TableColumn fx:id="tableColumnTitle" minWidth="8.0" prefWidth="105.0" text="Title" />
           <TableColumn fx:id="tableColumnAuthor" minWidth="0.0" prefWidth="107.0" text="Author" />
             <TableColumn fx:id="tableColumnISBN" prefWidth="107.0" text="ISBN" />
-            <TableColumn fx:id="tableColumnAvailable" prefWidth="96.0" text="Available" />
+            <TableColumn fx:id="tableColumnAvailable" prefWidth="107.0" text="Available" />
         </columns>
       </TableView>
       <Text layoutX="98.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Books">
