--- a/BaseGUI/src/fxml/user/HistoryWindow.fxml
+++ b/BaseGUI/src/fxml/user/HistoryWindow.fxml
@@ -7,22 +7,22 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.HistoryWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.HistoryWindowController">
    <children>
-      <Text layoutX="228.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="History">
+      <Text layoutX="300.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="History">
          <font>
             <Font name="Arial Bold" size="26.0" />
          </font>
       </Text>
       <Button layoutX="21.0" layoutY="350.0" mnemonicParsing="false" onAction="#menuAction" text="Menu" />
-      <TableView layoutX="9.0" layoutY="56.0" prefHeight="277.0" prefWidth="526.0">
+      <TableView fx:id="tableViewHistory" layoutX="9.0" layoutY="56.0" prefHeight="277.0" prefWidth="676.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Title" />
-          <TableColumn prefWidth="75.0" text="Author" />
-            <TableColumn prefWidth="75.0" text="ISBN" />
-            <TableColumn prefWidth="100.0" text=" Borrow date" />
-            <TableColumn prefWidth="100.0" text="Expiration date" />
-            <TableColumn prefWidth="100.0" text="Return date" />
+          <TableColumn fx:id="tableColumnTitle" prefWidth="75.0" text="Title" />
+          <TableColumn fx:id="tableColumnAuthor" prefWidth="75.0" text="Author" />
+            <TableColumn fx:id="tableColumnISBN" prefWidth="75.0" text="ISBN" />
+            <TableColumn fx:id="tableColumnBorrowDate" prefWidth="150.0" text=" Borrow date" />
+            <TableColumn fx:id="tableColumnExpirationDate" prefWidth="150.0" text="Expiration date" />
+            <TableColumn fx:id="tableColumnReturnDate" prefWidth="150.0" text="Return date" />
         </columns>
       </TableView>
    </children>
