--- a/BaseGUI/src/fxml/admin/ReportWindow.fxml
+++ b/BaseGUI/src/fxml/admin/ReportWindow.fxml
@@ -1,17 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.ReportWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="822.0" style="-fx-background-color: #FFFFFF;" stylesheets="@../../css/TableViewStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.ReportWindowController">
    <children>
-      <Text layoutX="28.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Report:" wrappingWidth="528.37890625">
+      <Text layoutX="24.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Report:" wrappingWidth="182.00001293420792">
          <font>
-            <Font name="Arial Bold" size="25.0" />
+            <Font name="Times New Roman Bold" size="25.0" />
          </font>
       </Text>
-      <Button layoutX="28.0" layoutY="311.0" mnemonicParsing="false" onAction="#menuAction" text="Menu" />
+      <Text layoutX="30.0" layoutY="73.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Select date:">
+         <font>
+            <Font name="Times New Roman Bold" size="16.0" />
+         </font>
+      </Text>
+      <JFXDatePicker fx:id="dateFrom" defaultColor="#2196f3" layoutX="30.0" layoutY="93.0" promptText="From" />
+      <JFXDatePicker fx:id="dateTo" defaultColor="#2196f3" layoutX="30.0" layoutY="143.0" promptText="To" />
+      <JFXButton fx:id="submitButton" buttonType="RAISED" layoutX="147.0" layoutY="184.0" onAction="#submitAction" onMouseEntered="#submitMouseEntered" onMouseExited="#submitMouseExited" prefHeight="25.0" prefWidth="58.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="Submit" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></JFXButton>
+      <JFXButton fx:id="standardReportButton" buttonType="RAISED" layoutX="28.0" layoutY="259.0" onAction="#standardReportAction" onMouseEntered="#standardReportMouseEntered" onMouseExited="#standardReportMouseExited" prefHeight="25.0" prefWidth="131.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="Standard report" textFill="WHITE" textOverrun="CLIP">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></JFXButton>
+      <JFXButton fx:id="mostPopularBooksButton" buttonType="RAISED" layoutX="28.0" layoutY="302.0" onAction="#mostPopularBooksAction" onMouseEntered="#mostPopularBooksMouseEntered" onMouseExited="#mostPopularBooksMouseExited" prefHeight="25.0" prefWidth="131.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="Most popular books" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></JFXButton>
+      <JFXButton fx:id="printToExcelButton" buttonType="RAISED" layoutX="28.0" layoutY="347.0" onAction="#printToExcelAction" onMouseEntered="#printToExcelMouseEntered" onMouseExited="#printToExcelMouseExited" prefHeight="25.0" prefWidth="131.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="Print to Excel" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></JFXButton>
+      <JFXButton fx:id="menuButton" buttonType="RAISED" layoutX="28.0" layoutY="392.0" onAction="#menuAction" onMouseEntered="#menuMouseEntered" onMouseExited="#menuMouseExited" prefHeight="25.0" prefWidth="131.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="Menu" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></JFXButton>
+      <TableView layoutX="218.0" layoutY="12.0" prefHeight="417.0" prefWidth="591.0">
+        <columns>
+          <TableColumn prefWidth="150.0" text="Date" />
+          <TableColumn prefWidth="110.0" text="Borrowed books" />
+            <TableColumn prefWidth="110.0" text="Booked books" />
+            <TableColumn prefWidth="110.0" text="Returned books" />
+            <TableColumn prefWidth="110.0" text="New users" />
+        </columns>
+      </TableView>
    </children>
+   <cursor>
+      <Cursor fx:constant="DEFAULT" />
+   </cursor>
 </Pane>
